Fixed overlapping header issue

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ header, nav ol ol{
 /**
  * @location Header
  */
-header {padding:0 10px 0 0;position:fixed;top:0;width:100%;border-bottom:1px solid #000;}
+header {padding:0 10px 0 0;position:fixed;top:0;width:100%;border-bottom:1px solid #000; z-index: 50;}
   #logo {float:right; height:20px; width: 212px;background:url('../images/pdx-cc-logo-dark.png'); background-repeat: no-repeat; margin: 6px 10px 0px 0px;}
   #menu {margin:0 0 0 5px;float:left;}
   #menu > ol > li{float:left;font-size:13px;position:relative;}
